roles/setup/files/ing-alertmanager.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  tls:
  - hosts:
      - alertmanager.microk8s.local
    secretName: alertmanager-ingress
  rules:
  - host: alertmanager.microk8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alertmanager-main
            port:
              number: 9093
