roles/setup/files/ing-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  tls:
  - hosts:
      - prometheus.microk8s.local
    secretName: prometheus-ingress
  rules:
  - host: prometheus.microk8s.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-k8s
            port:
              number: 9090
